    binomial (NB) and zero-truncated vs. zero-inflated vs. hurdle. The parameter
    names are all greek letters: lambda for Poisson mean, mu for NB mean,
    theta for NB dispersion, pi for zero-modification probability (either
    inflation or hurdle crossing). The theta parameter may also be called
    size for consistency with base R's nbinom family.

  o New data set "OralHealthNL" accompanying Hofstetter et al. (2016):
    "Modeling Caries Experience: Advantages of the Use of the Hurdle Model",
    Caries Research, 50(6), 517-526. doi:10.1159/000448197


Changes in Version 0.1-5

  o New d/p/q/r/s functions for the zero-truncated Poisson distribution
    where the parameter can either be specified in terms of the zero-truncated
    "mean" or the untruncated mean "lambda".
    
  o New ztpoisson() family object for the estimation of zero-truncated
    Poisson regression model via glm().


Changes in Version 0.1-4

  o New qresiduals() generic for computing (randomized) quantile residuals
    along with methods for various objects. (This is somewhat more flexible
    than statmod::qresiduals which is not generic.)
    
  o A Q-Q plot based on quantile residuals is available in the new function
    qqrplot().


Changes in Version 0.1-3

  o The hurdle() function now allows for the restriction of the theta
    parameter for the negative binomial distribution across the censored
    zero and truncated count components. The restriction is applied if
    dist = "negbin", zero.dist = "negbin", separate = FALSE.

  o Bug fix in the computation of the standard error of log(theta)
    in zeroinfl() when with weighted data. The weights were used
    for the estimation of log(theta) but the standard error was not
    scaled accordingly.


Changes in Version 0.1-2

  o The "style" and "scale" are now added as attributes to "rootogram"
    objects so that they can be re-used in the c() and + methods.


Changes in Version 0.1-1
