@@ -2,7 +2,45 @@ qresiduals <- function(object, ...) {
   UseMethod("qresiduals")
 }
 
-qresiduals.lm <- function(object, ...)
+qresiduals.default <- function(object, type = c("random", "quantile"), nsim = 1L, prob = 0.5, ...)
+{
+  ## type of residual for discrete distribution (if any)
+  type <- match.arg(type)
+
+  ## if 'object' is not a vector/matrix, apply pit() method
+  if(is.object(object) | !is.numeric(object)) {
+    object <- try(pit(object))
+    if(inherits(object, "try-error")) stop("could not obtain probability integral transform from 'object'")
+  }
+
+  ## preprocess supplied probabilities
+  nc <- NCOL(object)
+  nr <- NROW(object)
+  if(nc > 2L) stop("quantiles must either be 1- or 2-dimensional")
+  if(nc == 2L) {
+    if(type == "random") {
+      object <- matrix(
+        runif(nr * nsim, min = rep(object[, 1L], nsim), max = rep(object[, 2L], nsim)),
+        nrow = nr, ncol = nsim, dimnames = list(rownames(object), paste("r", 1L:nsim, sep = "_"))
+      )
+    } else {
+      nam <- rownames(object)
+      object <- object[, 1L]  %*% t(1 - prob) + object[, 2L] %*% t(prob)
+      dimnames(object) <- list(nam, paste("q", prob, sep = "_"))
+    }
+    nc <- NCOL(object)
+  }
+  if(!is.null(dim(object)) & nc == 1L) object <- drop(object)
+
+  ## compute quantile residuals  
+  qnorm(object)
+}
+
+pit <- function(object, ...) {
+  UseMethod("pit")
+}
+
+pit.lm <- function(object, ...)
 {
   ## obtain preprocessed response and fitted means
   y <- if(!is.null(object$y)) object$y else model.response(model.frame(object))
@@ -10,12 +48,10 @@ qresiduals.lm <- function(object, ...)
   
   ## compute probabilities from response distribution
   pr <- pnorm(y, mean = mu, sd = summary(object)$sigma)
-
-  ## call default method
-  qresiduals(pr, ...)
+  return(pr)
 }
 
-qresiduals.glm <- function(object, ...)
+pit.glm <- function(object, ...)
 {
   ## obtain preprocessed response and fitted means
   y <- if(!is.null(object$y)) object$y else model.response(model.frame(object))
@@ -45,12 +81,10 @@ qresiduals.glm <- function(object, ...)
     },
     stop("not implemented yet")
   )
-  
-  ## call default method
-  qresiduals(pr, ...)
+  return(pr)
 }
 
-qresiduals.negbin <- function(object, ...)
+pit.negbin <- function(object, ...)
 {
   ## response and fitted means
   y <- if(!is.null(object$y)) object$y else model.response(model.frame(object))
@@ -58,12 +92,10 @@ qresiduals.negbin <- function(object, ...)
   
   ## probabilities from response distribution
   pr <- cbind(pnbinom(y - 1L, mu = mu, size = object$theta), pnbinom(y, mu = mu, size = object$theta))  
-
-  ## call default method
-  qresiduals(pr, ...)
+  return(pr)
 }
 
-qresiduals.zeroinfl <- qresiduals.hurdle <- function(object, ...)
+pit.zeroinfl <- pit.hurdle <- function(object, ...)
 {
   ## response
   y <- if(!is.null(object$y)) object$y else model.response(model.frame(object))
@@ -73,12 +105,10 @@ qresiduals.zeroinfl <- qresiduals.hurdle <- function(object, ...)
   pr <- predict(object, type = "prob", max = max(y))
   pr <- cbind(0, t(apply(pr, 1L, cumsum)))
   pr <- cbind(pr[cbind(1L:n, y + 1L)], pr[cbind(1L:n, y + 2L)])
-
-  ## call default method
-  qresiduals(pr, ...)
+  return(pr)
 }
 
-qresiduals.zerotrunc <- function(object, ...)
+pit.zerotrunc <- function(object, ...)
 {
   ## response
   y <- if(!is.null(object$y)) object$y else model.response(model.frame(object))
@@ -88,35 +118,5 @@ qresiduals.zerotrunc <- function(object, ...)
   pr <- predict(object, type = "prob", max = max(y))
   pr <- cbind(0, t(apply(pr, 1L, cumsum)))
   pr <- cbind(pr[cbind(1L:n, y)], pr[cbind(1L:n, y + 1L)])
-
-  ## call default method
-  qresiduals(pr, ...)
-}
-
-qresiduals.default <- function(object, type = c("random", "quantile"), nsim = 1L, prob = 0.5, ...)
-{
-  ## type of residual for discrete distribution (if any)
-  type <- match.arg(type)
-
-  ## preprocess supplied probabilities
-  nc <- NCOL(object)
-  nr <- NROW(object)
-  if(nc > 2L) stop("quantiles must either be 1- or 2-dimensional")
-  if(nc == 2L) {
-    if(type == "random") {
-      object <- matrix(
-        runif(nr * nsim, min = rep(object[, 1L], nsim), max = rep(object[, 2L], nsim)),
-        nrow = nr, ncol = nsim, dimnames = list(rownames(object), paste("r", 1L:nsim, sep = "_"))
-      )
-    } else {
-      nam <- rownames(object)
-      object <- object[, 1L]  %*% t(1 - prob) + object[, 2L] %*% t(prob)
-      dimnames(object) <- list(nam, paste("q", prob, sep = "_"))
-    }
-    nc <- NCOL(object)
-  }
-  if(!is.null(dim(object)) & nc == 1L) object <- drop(object)
-
-  ## compute quantile residuals  
-  qnorm(object)
+  return(pr)
 }
